--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "author": "phpusr <phpusr@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@stomp/stompjs": "^5.0.0-beta.4",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "sockjs-client": "^1.3.0",
     "vue": "^2.5.17",
     "vue-resource": "^1.5.1"
   },
