--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "bootstrap-vue": "^2.0.0-rc.11",
     "sockjs-client": "^1.3.0",
     "vue": "^2.5.17",
-    "vue-resource": "^1.5.1"
+    "vue-resource": "^1.5.1",
+    "vuetify": "^1.3.9"
   },
   "devDependencies": {
     "@babel/core": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "babel-loader": "^8.0.2",
-    "css-loader": "^1.0.0",
-    "style-loader": "^0.23.0",
+    "css-loader": "^1.0.1",
     "vue-loader": "^15.4.2",
+    "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.17",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0",
