#13 Open Graph Protocol: превью ссылок на сайте по микроразметке. Spring Boot Rest (https://www.youtube.com/watch?v=ZM8XkFOebuc&list=PLU2ftbIeotGqSTOVNjT4L3Yfy8jatCdhm&index=13)

--- a/build.gradle
+++ b/build.gradle
@@ -55,5 +55,6 @@ dependencies {
 	compile('org.springframework.session:spring-session-jdbc')
 	compile('org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.0.0.RELEASE')
 	compile('org.postgresql:postgresql')
+	compile('org.jsoup:jsoup:1.11.3')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
