--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost/sarafan
-spring.datasource.username=sarafan
-spring.datasource.password=123
+spring.datasource.username=phpusr
+spring.datasource.password=
 spring.jpa.generate-ddl=true
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
