--- a/build.gradle
+++ b/build.gradle
@@ -56,5 +56,6 @@ dependencies {
 	compile('org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.0.0.RELEASE')
 	compile('org.postgresql:postgresql')
 	compile('org.jsoup:jsoup:1.11.3')
+	compile 'io.sentry:sentry-spring:1.7.27'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
