--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "license": "MIT",
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
+    "@sentry/browser": "^5.11.1",
+    "@sentry/integrations": "^5.11.1",
     "@stomp/stompjs": "^5.0.0-beta.4",
     "sockjs-client": "^1.3.0",
     "vue": "^2.5.17",
