#22. Публикация на Heroku. Spring Boot Rest (https://www.youtube.com/watch?v=q7e4A9pfNrk&list=PLU2ftbIeotGqSTOVNjT4L3Yfy8jatCdhm&index=22)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost/sarafan
-spring.datasource.username=phpusr
-spring.datasource.password=
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost/sarafan}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:phpusr}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.generate-ddl=true
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
