--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,9 @@ repositories {
 	mavenCentral()
 }
 
+node {
+	download = true
+}
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
